<resources>
    <string name="app_name">Pedometer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Pedometer</string>
    <string name="title_nav_my_week">My Week</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tip_double_click_exit">Double click to quit Pedometer App</string>
    <string name="logged_in_user_name">Not logged in</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_sync">Sync</string>
    <string name="pref_summary_sync">Keep synchronized with app server（user login required）</string>

    <string name="pref_default_step_length">50</string>
    <string name="pref_title_step_length">Step Length</string>
    <string name="pref_default_sensitivity">10</string>
    <string name="pref_title_sensitivity">Sensitivity</string>
    <string name="pref_title_goal">Goal</string>
    <string name="pref_summary_goal">The goal of steps per day</string>
    <string name="pref_default_goal">10000</string>

    <string name="title_goal">Goal</string>
    <string name="title_calorie">Calorie</string>
    <string name="title_duration">Duration</string>
    <string name="title_stride">Stride</string>
    <string name="title_distance">Distance</string>
    <string name="title_distance_meter">Distance(meter)</string>
    <string name="title_step_today">Today\'s Steps</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Google Data Sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_nick_name">Nick Name</string>
    <string name="prompt_password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short.Try one with at least 5 characters.</string>
    <string name="error_incorrect_password">The email and password you entered do not match</string>
    <string name="error_email_not_exists">The email does not exist</string>
    <string name="success_sign_in">Sign in succeed</string>
    <string name="error_network_fail">Failed to connect to the server</string>
    <string name="error_authentication_failed">Authentication Failed. Please contact the administrator.</string>
    <string name="error_confirm_password_failed">These passwords do not match. Please try again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_mail_been_taken">Someone already has that mail. Please Try another.</string>
    <string name="error_registration_failed">Registration failed</string>
    <string name="error_password_diff">Old password and new password should be different</string>
    <string name="error_password_change_failed">Password change failed</string>
    <string name="prompt_password_change_succeed">Password change succeed</string>


    <string name="title_user_nick_name">Nick name</string>
    <string name="title_user_email">Email</string>
    <string name="title_user_gender">Gender</string>
    <string name="title_user_height">Height</string>
    <string name="title_user_weight">Weight</string>
    <string name="title_user_height_cm">Height(cm)</string>
    <string name="title_user_weight_kg">Weight(kg)</string>
    <string name="title_profile">Profile</string>
    <string name="title_user_edit_profile">Edit profile</string>
    <string name="title_user_modify_pass">Change password</string>
    <string name="title_logout">Logout</string>

    <string name="title_nav_information">My Information</string>
    <string name="title_nav_setting">Settings</string>
    <string name="user_not_logged_in">User has not logged in</string>

    <string name="measurement_unit_height">cm</string>
    <string name="measurement_unit_weight">kg</string>

    <string name="load_failed">Loading failed</string>
    <string name="load_succeed">Loading succeed</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="action_commit">Commit</string>
    <string name="user_info_edit_failed">"Failed to edit user's information"</string>
    <string name="user_info_edit_succeed">"Succeed to edit user's information"</string>

    <string name="error_network_not_available">Network is not available</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="tip_start">Start</string>
    <string name="tip_pause">Pause</string>
    <string name="tip_sttop">Stop</string>

    <string name="error_records_save_failed">Failed to save record.(Login required)</string>

</resources>
