<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/title_activity_main" />
        <item android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/title_nav_my_week" />
        <item android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/title_nav_information" />
        <item android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_nav_setting" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item android:id="@+id/nav_share" -->
                <!--android:icon="@android:drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item android:id="@+id/nav_send" -->
                <!--android:icon="@android:drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>