<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context="com.github.neiplz.pedometer.MainActivity">

    <org.eazegraph.lib.charts.PieChart
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chart_pie"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp"
        app:egLegendTextSize="18sp"
        app:egUsePieRotation="true"
        app:egValueTextSize="36sp"/>

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:textSize="45sp"
        android:text="0"/>


    <LinearLayout
        android:id="@+id/goal_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/chart_pie"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/goal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_goal_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_duration">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/title_goal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/title_stride"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/distance_calorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/title_goal_duration"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/calorie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_distance_calorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_calorie">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/title_step_today"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/title_distance_meter"/>
    </LinearLayout>

</RelativeLayout>
